--- a/configs/waybar/.config/waybar/style.css
+++ b/configs/waybar/.config/waybar/style.css
@@ -61,6 +61,11 @@ window#waybar {
   margin: 0 5px;
 }
 
+window#waybar.empty #window {
+  padding: 0;
+  margin: 0;
+}
+
 #workspaces button:hover {
   box-shadow: inherit;
   text-shadow: inherit;
